[gd_scene load_steps=5 format=3 uid="uid://dlbfk6yvuxcn7"]

[ext_resource type="Script" path="res://Script/Chest/Chest.gd" id="1_a1446"]
[ext_resource type="Texture2D" uid="uid://jn1w1pcln3sj" path="res://Assets/Objects/Single_Chest.png" id="1_rayet"]
[ext_resource type="PackedScene" uid="uid://mnsmp1yecvky" path="res://Scene/Chest/chest_ui.tscn" id="3_k6vjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_neau4"]
size = Vector2(24, 24)

[node name="Chest" type="Node2D"]
script = ExtResource("1_a1446")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="SingleChest" type="Sprite2D" parent="."]
texture = ExtResource("1_rayet")

[node name="openable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="openable_area"]
shape = SubResource("RectangleShape2D_neau4")

[node name="collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collision"]
position = Vector2(-0.108773, 0.0243549)
scale = Vector2(0.50613, 0.473613)
polygon = PackedVector2Array(-15, -17, 16, -17, 16, 18, -17, 18, -17, -17)

[node name="chest_ui" parent="." instance=ExtResource("3_k6vjc")]
offset_left = -64.0
offset_top = 11.0
offset_right = -64.0
offset_bottom = 11.0

[connection signal="body_entered" from="openable_area" to="." method="_on_openable_area_body_entered"]
[connection signal="body_exited" from="openable_area" to="." method="_on_openable_area_body_exited"]
